<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RssiSimulationActivity">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_rssi_sim"
            android:layout_width="297dp"
            android:layout_height="218dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="31dp"
            android:layout_marginTop="90dp"
            android:textSize="16sp" />


        <Button
            android:id="@+id/btn_get_rssi_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="92dp"
            android:layout_marginStart="73dp"
            android:onClick="onClick"
            android:text="@string/getRSSI" />

        <Button
            android:id="@+id/btn_go_back_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/btn_get_rssi_sim"
            android:layout_marginEnd="57dp"
            android:text="@string/back" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:text="@string/simulation"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>